# product_dev_course

./: .gitignore  CLAUDE.md  COURSE_SUMMARY.md  Makefile  PR_DESCRIPTION.md  QUICK-START-LOGGING.md  README-LOGGING.md  README.md  docker-compose.logging.yml  docker-compose.override.yml.example  docker-compose.yml  env.docker.example  env.example  loki-config.yml  package-lock.json  promtail-config.yml
docs/: bugs.md  (+32 more)
projects/backend/common/: README.md  pyproject.toml
projects/backend/common/src/backend_common/: aiohttp_app.py  conversion.py  logging_config.py  metrics.py  worker.py
projects/backend/common/src/backend_common/api/: __init__.py  parsers.py
projects/backend/common/src/backend_common/db/: migrations.py  pool.py
projects/backend/common/src/backend_common/middleware/: trace.py
projects/backend/common/tests/: test_aiohttp_app.py  test_conversion.py  test_migrations.py  test_pool.py  test_script_executor.py  test_trace_middleware.py  test_worker.py
projects/backend/services/auth-service/: Dockerfile  conftest.py  env.example  pyproject.toml
projects/backend/services/auth-service/migrations/: 001_initial_schema.sql  002_refresh_token_rotation.sql  003_add_token_blacklist.sql  004_password_reset.sql  005_invite_system.sql  006_user_is_active.sql  007_remove_hardcoded_admin.sql
projects/backend/services/auth-service/openapi/: openapi.yaml
projects/backend/services/auth-service/openapi/components/: parameters.yaml  schemas.yaml
projects/backend/services/auth-service/openapi/paths/: auth.yaml  health.yaml  projects.yaml
projects/backend/services/auth-service/src/auth_service/: logging_config.py  main.py  prometheus_metrics.py  settings.py
projects/backend/services/auth-service/tests/: __init__.py  conftest.py  fix_repository_tests.py  test_api_auth.py  test_api_projects.py  test_api_rbac.py  test_auth_service.py  test_health.py  test_jwt.py  test_password.py  test_repositories.py
projects/backend/services/auth-service/tests/integration/: conftest.py  test_api_audit.py  test_api_auth.py  test_api_project_roles_extended.py  test_api_projects.py  test_api_system_roles_extended.py  test_api_users.py  test_permission_service.py
projects/backend/services/auth-service/tests/unit/: test_audit_log_cleanup.py  test_audit_service.py  test_metrics_endpoint.py  (+4 more)
projects/backend/services/experiment-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/backend/services/experiment-service/migrations/: 001_initial_schema.sql  002_audit_log_indexes.sql  002_continuous_aggregates.sql  002_sensor_projects_many_to_many.sql  002_webhooks.sql  003_add_run_tags.sql  004_webhooks.sql  005_run_events.sql
projects/backend/services/experiment-service/openapi/: openapi.yaml
projects/backend/services/experiment-service/tests/: conftest.py  fix_webhooks_tests.py  test_activate_scheduled_profiles.py  test_api_artifacts.py  test_api_backfill.py  test_api_comparison.py  test_api_experiments.py  test_api_export.py  test_api_ingest.py  test_api_rbac.py  test_api_run_events.py  test_api_runs.py  test_api_sensors.py  test_api_telemetry_export.py  test_api_webhooks.py  test_audit_log_cleanup.py  test_background_tasks.py  test_dependencies.py  test_domain_enums.py  test_domain_models.py  test_export_rate_limit.py  test_health.py  test_idempotency_service.py  test_middleware_audit.py  test_mock.py  test_s3_client.py  test_scheduled_profile_activation.py  test_state_machine.py  test_storage_layer.py  test_webhooks_dispatcher.py  test_worker.py  utils.py
projects/backend/services/telemetry-ingest-service/: Dockerfile  README.md  pyproject.toml
projects/backend/services/telemetry-ingest-service/migrations/: 005_sensor_error_log.sql
projects/backend/services/telemetry-ingest-service/openapi/: openapi.yaml
projects/backend/services/telemetry-ingest-service/tests/: conftest.py  fix_telemetry_mocks.py  test_api_ingest.py  test_api_ws_ingest.py  test_health.py  test_profile_cache.py  test_rest_rate_limit.py  test_sensor_error_log.py  test_spool.py  test_spool_flush_worker.py  test_telemetry_service.py  test_ws_rate_limit.py
projects/rc_vehicle/firmware/esp32/main/: CMakeLists.txt  config.hpp  http_server.cpp  idf_component.yml  main.cpp  uart_bridge.cpp  uart_bridge.hpp  websocket_server.cpp  wifi_ap.cpp
projects/rc_vehicle/firmware/esp32_s3/main/: CMakeLists.txt  config.hpp  failsafe.cpp  failsafe.hpp  imu.cpp  imu.hpp  mag.cpp  main.cpp  pwm_control.cpp  pwm_control.hpp  rc_input.cpp  rc_input.hpp  spi_esp32.cpp  spi_esp32.hpp  stabilization_config_json.cpp  stabilization_config_json.hpp  vehicle_control.cpp  vehicle_control.hpp  vehicle_control_platform_esp32.cpp  vehicle_control_platform_esp32.hpp  ws_command_handlers.cpp  ws_command_handlers.hpp  ws_command_registry.cpp  ws_command_registry.hpp
projects/rc_vehicle/firmware/stm32/: .gitignore  CMakeLists.txt  README.md
projects/rc_vehicle/firmware/stm32/cmake/: cube_ll_sources.cmake
projects/rc_vehicle/firmware/stm32/main/: board_pins.hpp  config.hpp  failsafe.cpp  failsafe.hpp  imu.cpp  imu.hpp  main.cpp  platform.cpp  platform.hpp  pwm_control.cpp  pwm_control.hpp  rc_input.cpp  rc_input.hpp  spi_stm32.cpp  spi_stm32.hpp  uart_bridge.cpp  uart_bridge.hpp
projects/rc_vehicle/firmware/tests/: CMakeLists.txt
projects/rc_vehicle/firmware/tests/integration/: test_control_loop.cpp  test_uart_bridge.cpp
projects/rc_vehicle/firmware/tests/mocks/: esp_log.h  mock_platform.hpp
projects/rc_vehicle/firmware/tests/unit/: test_auto_drive_coordinator.cpp  test_calibration_manager.cpp  test_com_offset_calibration.cpp  test_control_loop_processor.cpp  test_drive_mode_registry.cpp  test_failsafe.cpp  test_kids_mode.cpp  test_madgwick.cpp  test_motion_driver.cpp  test_protocol.cpp  test_self_test.cpp  test_stabilization_config.cpp  test_stabilization_manager.cpp  test_stabilization_pipeline.cpp  test_steering_trim_calibration.cpp  test_telemetry_event_log.cpp  test_telemetry_handler.cpp  test_telemetry_log.cpp  test_telemetry_manager.cpp  test_test_runner.cpp  test_vehicle_ekf.cpp
(+774 files in other folders)
